--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/Tasnimsomo/NobleNoor/issues"
   },
-  "homepage": "https://github.com/Tasnimsomo/NobleNoor#readme"
+  "homepage": "https://github.com/Tasnimsomo/NobleNoor#readme",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.7",
+    "iconv-lite": "^0.6.3"
+  }
 }
