--- a/package.json
+++ b/package.json
@@ -23,6 +23,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
-    "iconv-lite": "^0.6.3"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "framer-motion": "^11.5.4",
+    "iconv-lite": "^0.6.3",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.2",
+    "mongoose-sequence": "^6.0.1",
+    "nodemailer": "^6.9.15",
+    "react-scroll": "^1.9.0"
   }
 }
