--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "framer-motion": "^11.5.4",
     "iconv-lite": "^0.6.3",
     "joi": "^17.13.3",
