--- a/noblenoor/package.json
+++ b/noblenoor/package.json
@@ -13,13 +13,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "babel-loader": "^9.1.3",
+    "express-session": "^1.18.0",
     "framer-motion": "^11.5.4",
     "iconv-lite": "^0.6.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0",
     "webpack-dev-server": "^5.1.0"
